# norxidor

./: .env  .env.dev  .gitignore  README.md  bot.py  pyproject.toml
norxidor/plugins/account_management/: __init__.py  config.py  utils.py
norxidor/plugins/account_management/commands/: __init__.py  admin.py  good_day.py  lookup.py  nick.py  register.py  swindlestones.py
norxidor/plugins/account_management/types/: account.py
norxidor/plugins/anti_julian/: __init__.py  main.py
norxidor/plugins/simple_dungeon/: __init__.py  utils.py
norxidor/plugins/simple_dungeon/commands/: __init__.py  admin.py  ccreate.py  cdelete.py  roll.py
norxidor/plugins/simple_dungeon/types/: alignment.py  character.py  character_class.py  race.py
